--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My Portfolio</h1>
+<div class=""></div>    <h1>My Portfolio</h1>
     <h2>I'm Shannon Bulimo</h2>
     <h3>welcome to my portfolio</h3>
 
