--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
 <div class=""></div> 
     <h1 style="color: darkslategrey;">My Portfolio</h1>
-    <h2 style="color: rgb(27, 2, 56);">I'm Shannon Bulimo</h2>
+    <h2 style="color: rgb(58, 57, 59);">I'm Shannon Bulimo</h2>
     <h3 style="color: darkslategray;">Welcome to my portfolio</h3>
     <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" width="200" height="250">
     <p></p>
