--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <title>Document</title>
     <meta charset="UTF-8">
 </head>
-<body style="background-image: url('/home/shannon/Pictures/ankit-manoharan-W6noO51RH9A-unsplash.jpg');"> 
-  <div class="head 1"></div> 
+<body style="background-image: url('/home/shannon/Pictures/elegant 1.jpg'); 
     <h1 style="color: rgb(216, 77, 12);" font-size="120px";>My Portfolio</h1>
     <h2 style="color: rgb(153, 73, 7);">I'm Shannon Bulimo</h2>
     <h3 style="color: rgb(243, 111, 3);">Welcome to my portfolio</h3>
     <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" width="200" height="250">
     <p><h1 class="head"><strong>My about</strong></h1>
         My name is Shannon and I am a software development student at Moringa school. 
-        <li>Educational wise I am studying computer science.</li>
+       <ol> <li>Educational wise I am studying computer science.</li>
         <li>I decided to take software development so that I could get better at software development and achieve my goal of becoming a fullstack developer.sss</li>
         <li>I am very interested in learning new things like languages and musical instruments.</li>
+        </ol>
     </p>
 </body>
 </html>
