--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css M">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
     <meta charset="UTF-8">
+    <style>
+        .myDiv {
+          border: 5px outset red;
+          background-color: lightblue;
+          text-align: center;
+        }
+        </style>
 </head>
-<body style="background-image: url('/home/shannon/Pictures/elegant 1.jpg'); 
-    <h1 style="color: rgb(216, 77, 12);" font-size="120px";>My Portfolio</h1>
-    <h2 style="color: rgb(153, 73, 7);">I'm Shannon Bulimo</h2>
-    <h3 style="color: rgb(243, 111, 3);">Welcome to my portfolio</h3>
-    <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" width="200" height="250">
-    <p><h1 class="head"><strong>My about</strong></h1>
-        My name is Shannon and I am a software development student at Moringa school. 
-       <ol> <li>Educational wise I am studying computer science.</li>
-        <li>I decided to take software development so that I could get better at software development and achieve my goal of becoming a fullstack developer.sss</li>
-        <li>I am very interested in learning new things like languages and musical instruments.</li>
+<body>
+    <div class="myDiv">
+    style="background-image: url('/home/shannon/Pictures/elegant 1.jpg');>
+    <h1>My Portfolio</h1>
+    </div>
+    <h2>I'm Shannon Bulimo</h2>
+    <h3><em>Welcome to my portfolio</em></h3>
+    <image >
+    <p> <strong>My about</strong>
+        <ul>My name is Shannon and I am a software development student at Moringa school.
+            Educational wise I am studying computer science.
+            I decided to take software development so that I could get better at software development and achieve my goal of becoming a fullstack developer.
+            I am very interested in learning new things like languages and musical instruments.
+        </ul>
+        <ol>
+        <li><a href="https://github.com/xhannyb/hello-world"> Visit my hello world repo!</a></li>            
+        <li><a href="https://github.com/xhannyb/cookie-recipe">Visit my cookie recipe repo.</a></li> 
+        <li><a href="https://github.com/xhannyb/my-first-website">Click to view my first website</a></li>      
         </ol>
     </p>
+
 </body>
 </html>
