--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
  <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-    <meta charset="UTF-8">
-    <style>
-        .myDiv {
-          border: 5px outset red;
-          background-color: lightblue;
-          text-align: center;
-        }
-        </style>
-</head>
-<body>
-    <div class="myDiv">
-    style="background-image: url('/home/shannon/Pictures/elegant 1.jpg');>
-    <h1>My Portfolio</h1>
-    </div>
-    <h2>I'm Shannon Bulimo</h2>
-    <h3><em>Welcome to my portfolio</em></h3>
-    <image >
-    <p> <strong>My about</strong>
+    <head>
+     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+     <title>Document</title>
+        <meta charset="UTF-8">
+    </head>
+     <body>
+        <h1>My Portfolio</h1>
+         <h2>I'm Shannon Bulimo</h2>
+        <h3><em>Welcome to my portfolio</em></h3>
+        <p>
+             <strong><span style="color:goldenrod">My about</span></strong></p>
         <ul>My name is Shannon and I am a software development student at Moringa school.
             Educational wise I am studying computer science.
             I decided to take software development so that I could get better at software development and achieve my goal of becoming a fullstack developer.
