--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
      <link rel="stylesheet" href="styles.css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
      <title>Document</title>
-        <meta charset="UTF-8">
-        <style>
-            p{
-                background-image:
-                url('/home/shannon/Pictures/elegant 1.jpg');
-            }
-        </style>
+     <meta charset="UTF-8">
     </head>
-     <body>
+    <body background="/home/shannon/Pictures/elegant 1.jpg">
         <h1>My Portfolio</h1>
          <h2>I'm Shannon Bulimo</h2>
         <h3><em>Welcome to my portfolio</em></h3>
-        <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" alt= "profile" width="500" height="600">
+        <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">
         <p>
              <strong><span style="color:goldenrod">My about</span></strong></p>
         <ul>My name is Shannon and I am a software development student at Moringa school.
@@ -29,7 +23,8 @@
         <li><a href="https://github.com/xhannyb/cookie-recipe">Visit my cookie recipe repo.</a></li> 
         <li><a href="https://github.com/xhannyb/my-first-website">Click to view my first website</a></li>      
         </ol>
-    </p>
+        </p>
+        </p>
 
-</body>
+    </body>
 </html>
