--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
      <link rel="stylesheet" href="styles.css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <title>Document</title>
      <meta charset="UTF-8">
     </head>
@@ -10,7 +11,9 @@
         <h1>My Portfolio</h1>
          <h2>I'm Shannon Bulimo</h2>
         <h3><em>Welcome to my portfolio</em></h3>
+        <h4>
         <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">
+       </h4>
         <p>
              <strong><span style="color:goldenrod">My about</span></strong></p>
         <ul>My name is Shannon and I am a software development student at Moringa school.
