--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
      <title>Document</title>
      <meta charset="UTF-8">
     </head>
-    <body background="file:///home/shannon/Downloads/andrea-de-santis-vwnkvet865k-unsplash.jpg">
+    <body background="file:///home/shannon/Downloads/andrea-de-santis-vwnkvet865k-unsplash.jpg"  background-position: center;  background-size: cover;
+
+    >
         <h1>My Portfolio</h1>
          <h2>I'm Shannon Bulimo</h2>
         <h3><em>Welcome to my portfolio</em></h3>
