--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
  <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="styles.css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <title>Document</title>
-     <meta charset="UTF-8">
+
     </head>
     <body background="file:///home/shannon/Downloads/andrea-de-santis-vwnkvet865k-unsplash.jpg"  background-position: center;  background-size: cover;
 
@@ -14,7 +16,7 @@
          <h2>I'm Shannon Bulimo</h2>
         <h3><em>Welcome to my portfolio</em></h3>
         <h4>
-        <img src="/media/shannon/E6E836F5E836C399/Users/hp/Desktop/WhatsApp/Media/WhatsApp Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">
+        <img src="/home/shannon/Documents/moringa-school-projects/Greetings-from-Shannon/my portfolio/My-portfolio/Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">
        </h4>
         <p>
              <strong><span style="color:goldenrod">My about</span></strong></p>
@@ -30,6 +32,6 @@
         </ol>
         </p>
         </p>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
