--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="css/styles.css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <title>Document</title>
-
+    <title>Document</title>
+    <style>
+        body{
+           background-image: url("Images/zero-take-KcZWqs5zraY-unsplash.jpg"); 
+           background-position: center;
+           background-size: auto;
+           opacity: 10;
+        }
+    </style>
     </head>
-    <body background="file:///home/shannon/Downloads/andrea-de-santis-vwnkvet865k-unsplash.jpg"  background-position: center;  background-size: cover;
-
-    >
+    <body>
+        <div class="featured-item">
+            <p> </p>
         <h1>My Portfolio</h1>
          <h2>I'm Shannon Bulimo</h2>
         <h3><em>Welcome to my portfolio</em></h3>
-        <h4>
-        <img src="/home/shannon/Documents/moringa-school-projects/Greetings-from-Shannon/my portfolio/My-portfolio/Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">
-       </h4>
+        <img src="Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">     <link rel="stylesheet" href="css/styles.css">
+        </div>
         <p>
-             <strong><span style="color:goldenrod">My about</span></strong></p>
+             <strong><span style="color:rgb(28, 77, 241)">My about</span></strong></p>
         <ul>My name is Shannon and I am a software development student at Moringa school.
             Educational wise I am studying computer science.
             I decided to take software development so that I could get better at software development and achieve my goal of becoming a fullstack developer.
@@ -32,6 +38,5 @@
         </ol>
         </p>
         </p>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
