--- a/index.html
+++ b/index.html
@@ -1,42 +1,121 @@
- <!DOCTYPE html>
+
+<!doctype html>
+
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="css/styles.css">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
-    <style>
-        body{
-           background-image: url("Images/zero-take-KcZWqs5zraY-unsplash.jpg"); 
-           background-position: center;
-           background-size: auto;
-           opacity: 10;
-        }
-    </style>
-    </head>
-    <body>
-        <div class="featured-item">
-            <p> </p>
-        <h1>My Portfolio</h1>
-         <h2>I'm Shannon Bulimo</h2>
-        <h3><em>Welcome to my portfolio</em></h3>
-        <img src="Images/IMG-20211114-WA0007.jpg" alt= "profile" width="300" height="300">     <link rel="stylesheet" href="css/styles.css">
+
+  <head>
+
+	  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+	  <title> Shannon's Portfolio &bull; Software Developer</title>
+	  <meta name="description" content="Shannon Bulimo is a blooming software developer." />
+
+	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+
+	    <link rel="stylesheet" href="https://use.typekit.net/ean4ozv.css">
+	    <link href="css/reset.css" rel="stylesheet" type="text/css">
+	    <link href="css/style.css" rel="stylesheet" type="text/css">
+
+	    <meta name="author" content="Shannon Bulimo">
+	    <meta name="designer" content="Shannon Bulimo">
+
+
+	    <link rel="icon" type="image/png" sizes="32x32" href="img/logos/favicon-32x32.png">
+	    <link rel="icon" type="image/png" sizes="16x16" href="img/logos/favicon-32x32.png">
+	  </head>
+
+	  <body>
+	  	<div class="grid"></div>
+	  	<header class="alt-section">
+	  		<div class="container">
+		  		<span class="site-name"><a href="index.html"> Shanon Bulimo</a></span>
+		  		<nav>
+		  			<ul>
+		  				<li class="current"><a href="index.html">Home</a></li>
+		  				<!--<li><a href="words.html">Words</a></li>-->
+		  				<li><a href="work.html">Work</a></li>
+		  				<li><a href="about.html">About</a></li>
+		  				<li><a href="contact.html">Contact</a></li>
+		  			</ul>
+		  		</nav>
+		  	</div>
+	  	</header>
+	  	<section class="introduction">
+        <div class="introduction-inset">
+  	  		<div class="container">
+            <div class="very-inset">
+              <h1>Hello, it's Shannon Bulimo</h1>
+            </div>
+  		  		<div class="super-inset">
+  		  			<p>I am a software developer.</p>
+  		  		</div>
+  		  	</div>
         </div>
-        <p>
-             <strong><span style="color:rgb(28, 77, 241)">My about</span></strong></p>
-        <ul>My name is Shannon and I am a software development student at Moringa school.
-            Educational wise I am studying computer science.
-            I decided to take software development so that I could get better at software development and achieve my goal of becoming a fullstack developer.
-            I am very interested in learning new things like languages and musical instruments.
-        </ul>
-        <ol>
-        <li><a href="https://github.com/xhannyb/hello-world"> Visit my hello world repo!</a></li>            
-        <li><a href="https://github.com/xhannyb/cookie-recipe">Visit my cookie recipe repo.</a></li> 
-        <li><a href="https://github.com/xhannyb/my-first-website">Click to view my first website</a></li>      
-        </ol>
-        </p>
-        </p>
+	  	</section>
+	  	<section class="portfolio-preview alt-section double-moon">
+		  	
+		  		<p>I’ve designed and built marketing websites, digital products, apps, ecommerce experiences, and more. <br />See more work in the <a href="">Portfolio</a>.</p>
+		  	</div>
+	  	</section>
+      <!--
+      <section class="faqs">
+	  		<div class="container">
+		  		<h2 class="very-inset">FAQ’s</h2>
+		  		<ul class="very-inset">
+		  			<li><a href="">What services do you provide?</a></li>
+		  			<li><a href="">What is your design process?</a></li>
+		  			<li><a href="">How much do you charge?</a></li>
+		  		</ul>
+		  	</div>
+	  	</section>
+	  	<section class="alt-section articles star-clusters">
+		  	<div class="container">
+		  		<h2 class="very-inset">Recent Articles</h2>
+		  		<ul class="">
+		  			<li>
+		  				<h3><a href="">An overview of my design process</a></h3>
+		  				<p>I still refine it more and more every year, but this is what works well for me.</p>
+		  			</li>
+		  			<li>
+		  				<h3><a href="">A guide to establishing a visual style</a></h3>
+		  				<p> I still refine it more and more every year, but this is what works well for me.</p>
+		  			</li>
+		  			<li>
+		  				<h3><a href="">How much will my website cost?</a></h3>
+		  				<p>I still refine it more and more every year, but this is what works well for me.</p>
+		  			</li>
+		  			<li>
+		  				<h3><a href="">How to talk about design decisions</a></h3>
+		  				<p>I still refine it more and more every year, but this is what works well for me.</p>
+		  			</li>
+		  			<li>
+		  				<h3><a href="">How to become a designer who codes</a></h3>
+		  				<p>I still refine it more and more every year, but this is what works well for me.</p>
+		  			</li>
+		  		</ul>
+		  	</div><!-- /end container -->
+	  	</section><!-- /end -->
+	  	<section class="contact">
+				<div class="container">
+		  		<div class="contact-info very-inset">
+		  			<h1>Contact Me</h1>
+		  			<p>I’m currently taking on new clients, and would love to hear about your project. Please include as much information as possible about the scope of your project, your timelines, and your budget. Email me at <a href="">shannonbulimo@gmail.com</a>.</p>
+		  		</div>
+		  	</div><!-- /end container -->
+	  	</section>
+      <footer class="alt-section">
+	  		<div class="container">
+		  		<span class="site-name"><a href="index.html">Shannon Bulimo</a></span>
+		  		<nav>
+		  			<ul>
+		  				<li class="current"><a href="index.html">Home</a></li>
+		  				<!--<li><a href="words.html">Words</a></li>-->
+		  				<li><a href="work.html">Work</a></li>
+		  				<li><a href="about.html">About</a></li>
+		  				<li><a href="contact.html">Contact</a></li>
+		  			</ul>
+		  		</nav>
+		  	</div>
+	  	</header>
     </body>
 </html>
